--- a/index.html
+++ b/index.html
@@ -769,17 +769,22 @@
         // Enemies
         let enemies = [];
         let enemySpawnTimer = 0;
-        let enemySpawnRate = 90;
+        let enemySpawnRate = isMobile ? 120 : 90; // Slower spawn on mobile
         let enemiesPerWave = 5;
         let enemiesSpawnedThisWave = 0;
         let enemiesDefeatedThisWave = 0;
         let waveComplete = false;
         let waveTransitionTimer = 0;
 
+        // Mobile difficulty adjustments
+        const mobileEnemySpeedMult = 0.7; // Enemies 30% slower on mobile
+        const mobileBossFireRate = 140; // Boss fires slower on mobile (vs 90 on desktop)
+        const mobileEnemyProjectileSpeed = 3.5; // Slower boss projectiles on mobile (vs 5)
+
         // High Wind Period & Wind Turbine Collectible
         let highWindActive = false;
         let highWindTimer = 0;
-        let highWindDuration = 300; // frames (~5 seconds)
+        let highWindDuration = isMobile ? 420 : 300; // Longer window on mobile (~7 sec vs ~5 sec)
         let highWindStartFrame = 180; // Start high wind after 3 seconds into wave
         let windTurbine = null; // Collectible wind turbine
         let windTurbineCollected = false;
@@ -787,7 +792,7 @@
         // Spread Shot Power-up
         let spreadShotActive = false;
         let spreadShotTimer = 0;
-        let spreadShotDuration = 480; // frames (~8 seconds)
+        let spreadShotDuration = isMobile ? 600 : 480; // Longer power-up on mobile (~10 sec vs ~8 sec)
         let spreadShotAngle = Math.PI / 6; // 30 degree spread
 
         // Boss Coal Power Plant
@@ -1271,7 +1276,7 @@
                 y: y,
                 width: enemyW,
                 height: enemyH,
-                speed: (0.8 + Math.random() * 0.4) * speedMult,
+                speed: (0.8 + Math.random() * 0.4) * speedMult * (isMobile ? mobileEnemySpeedMult : 1),
                 health: baseHealth,
                 maxHealth: baseHealth,
                 wobble: Math.random() * Math.PI * 2,
@@ -1335,7 +1340,7 @@
                 health: bossHealth,
                 maxHealth: bossHealth,
                 fireTimer: 0,
-                fireRate: 90, // Frames between shots
+                fireRate: isMobile ? mobileBossFireRate : 90, // Frames between shots
                 targetX: canvas.width / 2,
                 targetY: canvas.height / 2
             };
@@ -1356,8 +1361,8 @@
             enemyProjectiles.push({
                 x: startX,
                 y: startY,
-                vx: Math.cos(angle) * 5,
-                vy: Math.sin(angle) * 5,
+                vx: Math.cos(angle) * (isMobile ? mobileEnemyProjectileSpeed : 5),
+                vy: Math.sin(angle) * (isMobile ? mobileEnemyProjectileSpeed : 5),
                 radius: 8 * scaleFactor
             });
 
@@ -1450,8 +1455,8 @@
 
         function nextWave() {
             wave++;
-            enemiesPerWave = Math.min(5 + wave * 2, 25);
-            enemySpawnRate = Math.max(50, 90 - wave * 5);
+            enemiesPerWave = Math.min(5 + wave * 2, isMobile ? 20 : 25); // Fewer enemies on mobile
+            enemySpawnRate = Math.max(isMobile ? 70 : 50, (isMobile ? 120 : 90) - wave * 5); // Slower spawns on mobile
             enemiesSpawnedThisWave = 0;
             enemiesDefeatedThisWave = 0;
             waveComplete = false;
@@ -1982,6 +1987,11 @@
             document.getElementById('startScreen').style.display = 'none';
             document.getElementById('gameOverScreen').style.display = 'none';
 
+            // Show mobile HUD when game starts
+            if (isMobile) {
+                document.getElementById('mobileHUD').style.display = 'flex';
+            }
+
             updateMetricsDisplay();
         }
 
@@ -2006,6 +2016,11 @@
             }
 
             document.getElementById('gameOverScreen').style.display = 'flex';
+
+            // Hide mobile HUD during game over screen
+            if (isMobile) {
+                document.getElementById('mobileHUD').style.display = 'none';
+            }
         }
 
         // Event listeners
